--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ anyhow = "1.0.72"
 chrono = { version = "0.4.26", features = ["serde"] }
 clap = { version = "4.3.17", features = ["derive"] }
 osascript = "0.3.0"
+rand = "0.8.5"
 serde = { version = "1.0.173", features = ["derive"] }
 serde_json = "1.0.103"
